--- a/main.html
+++ b/main.html
@@ -10,7 +10,15 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<div class="container">
+        <div class="circle active"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+    </div>
+    <button id="prev" disabled>Previous</button>
+    <button id="next">Next</button>
 </body>
 
 </html>
